--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "app",
   "private": "true",
   "dependencies": {
-    "@popperjs/core": "^2.11.3",
+    "@popperjs/core": "^2.11.4",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
     "sass": "^1.49.9"
   },
   "scripts": {
-    "build:css": "sass ./app/assets/stylesheets/application.bootstrap.scss ./app/assets/builds/application.css --no-source-map --load-path=node_modules"
+    "build:css": "sass ./app/assets/stylesheets/application.sass.scss ./app/assets/builds/application.css --no-source-map --load-path=node_modules"
   }
 }
